# Analysis-value-pack-WOS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
config/: analysis.yaml  external_sources.yaml  game_profiles.yaml  ingestion.yaml  item_categories.yaml  item_values.yaml  planner_presets.yaml  player_profiles.yaml  validation.yaml
docs/: AGENT_DIRECTIVES.md  AGENT_OVERVIEW.md  AI_GUIDE.md  DATA_MODEL.md  GAMEPLAY_GUIDE.md  GAME_MECHANICS.md  IMAGE_ANALYSIS.md  PACK_EXPLORER.md  QUICKSTART.md  TODO_AGENT.md  VALUATION_STRATEGY.md
examples/: ocr_sample.txt  sample_packs.xlsx
ocr_review/: ocr_review.css  ocr_review.html  ocr_review.js
pack_explorer/: pack_explorer.css  pack_explorer.html  pack_explorer.js
site_data/: items.json  packs.json
tests/: test_analysis_ranking.py  test_announcements.py  test_auto_update.py  test_budget_planner.py  test_game_profiles.py  test_goal_planner.py  test_item_categories.py  test_knowledge_github_ingestion.py  test_knowledge_linking.py  test_knowledge_loader.py  test_knowledge_web_scraping.py  test_ocr_ingestion.py  test_ocr_review_ingestion.py  test_pipeline.py  test_player_profiles.py  test_price_inference.py  test_reference_sheets.py  test_snapshot_history.py  test_summaries.py  test_validation.py
tests/data/: sample_packs.csv
wos_pack_value/: __init__.py  __main__.py  cli.py  logging_utils.py  pipeline.py  settings.py  utils.py
wos_pack_value/analysis/: __init__.py  announcements.py  budget_planner.py  game_profiles.py  goal_planner.py  item_categories.py  planner_presets.py  (+3 more)
(+28 files in other folders)
